Fixes Spacing in Audio media-caption
SRFCMSAL-1976

--- a/source/_patterns/20-molecules/media-caption/media-caption.scss
+++ b/source/_patterns/20-molecules/media-caption/media-caption.scss
@@ -29,6 +29,11 @@
   padding-right: 0;
 }
 
+.media-caption--audio {
+  padding-right: 16px;
+  padding-left: 16px;
+}
+
 .media-caption__title {
   flex: 0 0 auto;
   margin-bottom: 4px;
